--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "firebase": "^3.6.9",
     "firebaseui": "^1.0.0",
+    "knuth-shuffle": "^1.0.1",
     "vue": "^2.1.0",
     "vue-router": "^2.2.0",
     "vuex": "^2.1.2"
