--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "dependencies": {
     "firebase": "^3.6.9",
     "firebaseui": "^1.0.0",
+    "install": "^0.8.7",
     "knuth-shuffle": "^1.0.1",
+    "normalize.css": "^5.0.0",
+    "npm": "^4.2.0",
     "vue": "^2.1.0",
     "vue-router": "^2.2.0",
     "vuex": "^2.1.2"
