--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "version": "1.0.0",
   "author": "Henrik Fogelberg <henrik.fogelberg@gmail.com>",
   "scripts": {
+    "start": "node index.js",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "connect-history-api-fallback": "^1.3.0",
+    "express": "^4.14.1",
     "firebase": "^3.6.9",
     "firebaseui": "^1.0.0",
     "install": "^0.8.7",
